# pindeck

./: -  .convex-prod-logs.err.txt  .convex-prod-logs.txt  .env.example  .gitignore  .mcp.json  .vercelignore  AGENTS.md  HANDOFF.md  README.md  SUMMARY.md  TODOS  WARP.md  bunfig.toml  cspell.json  env.example  index.html  package.json  skills-lock.json  style.md  test-browser.ts  trigger.config.ts  tsconfig.json  tsconfig.node.json  updates-fixes.md  vercel.json  vite.config.ts
.Jules/: palette.md
.claude/: launch.json  settings.json  settings.local.json
.kilo/: kilo.json
.playwright-mcp/: page-2026-05-23T14-55-09-669Z.yml  page-2026-05-23T14-55-18-799Z.yml  page-2026-05-23T14-55-28-201Z.yml  page-2026-05-23T15-40-50-496Z.yml
TMP/: Deck Composer.html  HANDOFF.md  Pindeck.html  app.jsx  data.jsx  index.html  package.json  parts.jsx  vercel.json  views.jsx
convex/: auth.config.ts  auth.ts  boards.ts  colorExtraction.ts  colorExtractionAdmin.ts  colorExtractionUrls.ts  colorExtractionWrite.ts  debug.ts  decks.ts  discordNotifications.ts  generations.ts  http.ts  images.ts  integrations.ts  maintenance.ts  mediaStorage.ts  orchestration.ts  schema.ts  seed.ts  storyboards.ts  triggerDispatch.ts  tsconfig.json  vision.ts
docs-site/: development.mdx  index.mdx  (+1 more)
services/pinterest-ingest/: .dockerignore  Dockerfile  README.md  pyproject.toml
services/pinterest-ingest/src/pinterest_ingest/: __init__.py  config.py  db.py  extractor.py  main.py  models.py  pindeck.py  rss.py
services/pinterest-ingest/tests/: test_api.py  test_extractor.py  test_pindeck.py
(+162 files in other folders)
